Mon Jul 27 13:25:28 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Add example of using "*CALIBRATE DECLINATION".

Mon Jul 27 13:24:52 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Consistently say "magnetic declination" instead of
	  "magnetic deviation".

Mon Jul 27 13:05:58 GMT 2015  Olly Betts <olly@survex.com>

	* src/Makefile.am: Add thgeomag code to the build system.

Mon Jul 27 13:04:54 GMT 2015  Olly Betts <olly@survex.com>

	* src/thgeomag.c,src/thgeomag.cxx: Tweak thgeomag.cxx to be valid C
	  code.

Mon Jul 27 12:54:19 GMT 2015  Olly Betts <olly@survex.com>

	* src/thgeomag.cxx: Fix "set but not used" warning.

Mon Jul 27 12:42:47 GMT 2015  Olly Betts <olly@survex.com>

	* src/: Add IGRF handling code from therion 5.3.16.

Mon Jul 27 08:08:11 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/: Extend check for *fix before *cs to catch
	  *fix with standard deviations too.

Sun Jul 26 11:36:36 GMT 2015  Olly Betts <olly@survex.com>

	* src/printing.cc: Remove the "Coordinate projection" field from the
	  print dialog, as it isn't relevant there.

Sun Jul 26 11:21:33 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc,src/gfxcore.h: Fix initial scale for small caves
	  (since 1.2.18 the initial scale has been too small).  Don't rescale
	  if the same file is reloaded, but adjust the volume diameter as
	  appropriate.

Wed Jul 15 09:10:50 GMT 2015  Olly Betts <olly@survex.com>

	* doc/HACKING.htm: Update list of debian packages to install to build
	  from git.

Wed Jul 15 08:16:44 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac,doc/manual.sgml: Update for 1.2.21.

Wed Jul 15 08:15:20 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Document that 1.2.21 is needed for *fix using
	  latitude and longitude, or with standard deviations.

Tue Jul 14 17:53:21 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Jul 14 17:46:38 GMT 2015  Olly Betts <olly@survex.com>
